# hs_course

Ch10 (Parsing)/: EitherInt.hs  FunctorLaws.hs  PNM.hs  Parse.hs  TreeMap.hs  ValidFunctor.hs
Ch11 (Test and Quality Assurance)/: Arbitrary.hs  Prettify2.hs  QC-basics.hs
Ch3/: GoodIndent.hs  Lending.hs
Ch4 (FP)/: Exercises.hs  Exercises1.hs  Exercises2.hs
Ch5 (Json Lib)/: Main.hi  Main.hs  Prettify.hs  PrettyJSON.hs  PrettyStub.hs  PutJson.hi  SimpleJSON.hi  SimpleJSON.hs  mypretty.cabal  simple
Ch6 (TypeClasses)/: ColorDerived.hs  Eqclasses.hs  JSONClass.hs  Monomorphism.hs  Naiveeq.hs  Newtype.hs  Overlap.hs  Read.hs  SimpleClass.hs
Ch7 (IO)/: Basicio-nodo.hs  Basicio.hs  Callingpure.hs  Return1.hs  TempFile.hs  ToUpper-imp.hs  ToUpper-lazy.hs  ToUpper-lazy2.hs
Ch8 (Efficient)/: ElfMagic.hs  FileSystem.md  Glob.hs  GlobRegex.hs  HighestClose.hs  REGEX.md  SumFile.hs  input.txt
Ch9 (io lib)/: BetterPredicate.hs  Conspect.md  ControlledVisit.hs  RecursiveContents.hs  SimpleFinder.hs
MyTests/: BackTracking.hi  BackTracking.hs  CodeWars.hs  MergeSort.hs  QuickSort.hs  test
Sandbox/Parser/: PNM.hs  Parse.hs
