Name:   mypretty
Version:    0.0.1

Synopsis: My pretty printing library, with JSON support
Description:
    A simple pretty-printing lbrary that illustrates how to
    develop a haskell library.
Author: PSIfunction

Cabal-Version: >= 1.2

library
    Exposed-Modules:    Prettify
                        PrettyJSON
                        SimpleJSON
    Build-Depends: base >= 2.0

-- End